[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Root.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LevelUpPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Welcome.tscn" type="PackedScene" id=7]

[node name="Root" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false

[node name="guis" type="CanvasLayer" parent="."]
layer = 0

[node name="GUI" parent="guis" instance=ExtResource( 3 )]
visible = false

[node name="LevelUpPopup" parent="guis" instance=ExtResource( 4 )]
visible = false

[node name="GameOver" parent="guis" instance=ExtResource( 5 )]
pause_mode = 2
visible = false

[node name="Pause" parent="guis" instance=ExtResource( 6 )]
visible = false

[node name="Welcome" parent="guis" instance=ExtResource( 7 )]

[connection signal="mob_added" from="." to="guis/GUI" method="_on_Root_mob_added"]
[connection signal="nest_added" from="." to="guis/GUI" method="_on_Root_nest_added"]
[connection signal="exp_change" from="Player" to="guis/GUI" method="_on_Player_exp_change"]
[connection signal="he_ded_man" from="Player" to="." method="_on_Player_he_ded_man"]
[connection signal="hp_change" from="Player" to="guis/GUI" method="_on_Player_hp_change"]
[connection signal="lvl_change" from="Player" to="guis/GUI" method="_on_Player_lvl_change"]
[connection signal="lvl_change" from="Player" to="." method="_on_Player_lvl_change"]
[connection signal="ranged_on" from="Player" to="guis/GUI" method="_on_Player_ranged_on"]
[connection signal="score" from="Player" to="." method="_on_Player_score"]
[connection signal="special_on" from="Player" to="guis/GUI" method="_on_Player_special_on"]
[connection signal="rangeBtn" from="guis/GUI" to="Player" method="_on_GUI_rangeBtn"]
[connection signal="specialBtn" from="guis/GUI" to="Player" method="_on_GUI_specialBtn"]
[connection signal="swordBtn" from="guis/GUI" to="Player" method="_on_GUI_swordBtn"]
[connection signal="ranged" from="guis/LevelUpPopup" to="Player" method="_on_LevelUpPopup_ranged"]
[connection signal="regen" from="guis/LevelUpPopup" to="Player" method="_on_LevelUpPopup_regen"]
[connection signal="special" from="guis/LevelUpPopup" to="Player" method="_on_LevelUpPopup_special"]
[connection signal="sword" from="guis/LevelUpPopup" to="Player" method="_on_LevelUpPopup_sword"]
[connection signal="new_game" from="guis/GameOver" to="." method="_on_GameOver_new_game"]
[connection signal="start" from="guis/Welcome" to="." method="_on_Welcome_start"]
